--- a/writing.html
+++ b/writing.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
 <!--  Last Published: Tue Nov 08 2022 13:31:50 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6361624a3134b175ef42857f" data-wf-site="636113eb1674a4ffc2d7f57f" lang="en">
+<html data-wf-page="6361624a3134b161ac428595" data-wf-site="636113eb1674a4ffc2d7f57f" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bryn Taylor · Page not found ⛔️</title>
-  <meta content="Oops, the page you’re looking for can&#x27;t be found." name="description">
-  <meta content="Bryn Taylor · Page not found ⛔️" property="og:title">
-  <meta content="Oops, the page you’re looking for can&#x27;t be found." property="og:description">
+  <title>Bryn Taylor · Writing</title>
+  <meta content="All of my writing, blog posts and interviews from over the years. Covering all things design." name="description">
+  <meta content="Bryn Taylor · Writing" property="og:title">
+  <meta content="All of my writing, blog posts and interviews from over the years. Covering all things design." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/5e3e7c483432688646a0bc0d/60f927a37f1472232767dc53_bryn-taylor-portfolio-opengraph-image.jpg" property="og:image">
-  <meta content="Bryn Taylor · Page not found ⛔️" property="twitter:title">
-  <meta content="Oops, the page you’re looking for can&#x27;t be found." property="twitter:description">
+  <meta content="Bryn Taylor · Writing" property="twitter:title">
+  <meta content="All of my writing, blog posts and interviews from over the years. Covering all things design." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/5e3e7c483432688646a0bc0d/60f927a37f1472232767dc53_bryn-taylor-portfolio-opengraph-image.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -36,7 +36,7 @@
 }
 </style>
 </head>
-<body class="background-color-mint">
+<body>
   <div id="pop-up-wrapper" class="pop-up_wrapper">
     <div data-w-id="4cfc318d-0c01-b050-f8f9-7c1854c31488" class="pop-up_overlay"></div>
     <div class="pop-up_dialog">
@@ -69,7 +69,7 @@
       </div>
     </div>
   </div>
-  <div class="page-wrapper">
+  <div style="-webkit-transform:translate3d(0, -8rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -8rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -8rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -8rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="page-wrapper">
     <div class="global-styles w-embed">
       <style>
 /* Snippet gets rid of top margin on first element in any rich text*/
@@ -199,22 +199,151 @@ main:focus-visible {
       </div>
     </div>
     <main id="main" class="main-wrapper">
-      <div data-w-id="259f52a3-6534-de22-7daf-e381ee7c0619" class="section-header is-multi-colored">
+      <header id="home" class="section-header is-multi-colored">
         <div class="page-padding">
-          <div class="container-large">
+          <div style="opacity:0" class="container-large">
             <div class="layout-12-column">
-              <div id="w-node-_719aa2ad-57a0-9f48-2f8e-19a6a7a4f1ab-ef42857f" class="content-wrapper">
-                <div class="margin-bottom margin-large">
-                  <h1 class="heading-xlarge">404<br>Page not found!</h1>
+              <h1 id="w-node-_50457d26-3dd1-d039-6b91-26c2f032d599-ac428595" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(10deg, 6deg);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(10deg, 6deg);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(10deg, 6deg);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(10deg, 6deg);opacity:0" class="heading-xlarge">Writing</h1>
+            </div>
+          </div>
+        </div>
+      </header>
+      <section id="writing" class="section with-divider">
+        <div class="page-padding">
+          <div style="opacity:0" class="container-large">
+            <div class="layout-12-column">
+              <div id="w-node-_61c11393-d053-b5ff-0386-2c37da0f1e22-ac428595" class="sticky-title-wrapper">
+                <div class="section-title is-offset">
+                  <h2>Blog</h2>
                 </div>
-                <div class="button-wrapper">
-                  <a href="index.html" class="button w-button">Go Home →</a>
+              </div>
+              <div id="w-node-_61c11393-d053-b5ff-0386-2c37da0f1e26-ac428595" class="writing-links-wrapper is-offset">
+                <div class="w-dyn-list">
+                  <div role="list" class="w-dyn-items">
+                    <div role="listitem" class="writing-collection-item w-dyn-item">
+                      <a href="#" class="list-item is-interactive w-inline-block">
+                        <div class="padding-bottom padding-small">
+                          <h3 class="heading-medium"></h3>
+                        </div>
+                        <div class="writing-link-details">
+                          <div class="tag is-multi-colored">
+                            <div>NEW</div>
+                          </div>
+                          <p class="text-size-regular margin-0"></p>
+                          <p class="text-size-regular margin-0"></p>
+                          <div class="margin-horizontal margin-xsmall">
+                            <p class="text-size-regular margin-0">·<br></p>
+                          </div>
+                          <p class="text-size-regular margin-0"></p>
+                          <p class="text-size-regular margin-0"> min read<br></p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="w-dyn-empty">
+                    <div>No items found.</div>
+                  </div>
                 </div>
+              </div>
+            </div>
+            <div class="padding-vertical padding-xhuge"></div>
+            <div class="layout-12-column">
+              <div id="w-node-f70769f8-f29b-42ad-165a-b1db5ba7b0d4-ac428595" class="sticky-title-wrapper">
+                <div class="section-title is-offset">
+                  <h2>Interviews</h2>
+                </div>
+              </div>
+              <div id="w-node-f70769f8-f29b-42ad-165a-b1db5ba7b0d8-ac428595" class="writing-links-wrapper is-offset">
+                <a href="https://www.loversmagazine.com/interviews/bryn-taylor" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Interview with Lovers Magazine ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <div class="writing-link-details">
+                    <p class="text-size-regular margin-0">Nov 12, 2021  ·  7 min read<br></p>
+                  </div>
+                </a>
+                <a href="https://medium.com/8px-magazine/kerning-from-the-best-5-minutes-with-bryn-taylor-70f4295a1ce8" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Interview with Luis Ouriach: Kerning from the best ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="text-size-regular margin-0">Mar 12, 2021  ·  5 min read<br></p>
+                </a>
+                <a href="https://medium.com/the-creatives-series/bryn-taylor-on-pushing-boundaries-and-design-exploration-d1a1209a9f37" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Interview with Femke: On pushing boundaries and design exploration ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="text-size-regular margin-0">Jan 18, 2017  ·  7 min read<br></p>
+                </a>
+              </div>
+            </div>
+            <div class="padding-vertical padding-xhuge"></div>
+            <div class="layout-12-column">
+              <div id="w-node-_952e44d1-8ddc-0268-a623-d8b651a1e40a-ac428595" class="sticky-title-wrapper">
+                <div class="section-title is-offset">
+                  <h2>Side projects</h2>
+                </div>
+              </div>
+              <div id="w-node-_952e44d1-8ddc-0268-a623-d8b651a1e40e-ac428595" class="writing-links-wrapper is-offset">
+                <a href="https://goodgarms.webflow.io/articles/sustainable-white-t-shirts" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Good Garms: Best sustainable white t-shirts ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="text-size-regular margin-0">Jun 6, 2022  · 5 min read<br></p>
+                </a>
+                <a href="https://www.goodgarms.com/articles/material-polyester" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Good Garms: Polyester fabric guide ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="text-size-regular margin-0">Sep 8, 2021  ·  4 min read<br></p>
+                </a>
+                <a href="https://www.goodgarms.com/articles/material-organic-cotton" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Good Garms: All you need to know about linen ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="text-size-regular margin-0">Jul 6, 2021  ·  3 min read<br></p>
+                </a>
+                <a href="https://www.goodgarms.com/articles/material-organic-cotton" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Good Garms: A definitive guide to organic cotton ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="text-size-regular margin-0">Jul 5, 2021  ·  3 min read<br></p>
+                </a>
+                <a href="https://www.goodgarms.com/articles/what-is-slow-fashion" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Good Garms: What is slow fashion? ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="text-size-regular margin-0">Jun 6, 2021  ·  3 min read<br></p>
+                </a>
+                <a href="https://www.goodgarms.com/articles/sustainable-fashion-glossary" class="list-item is-interactive w-inline-block">
+                  <h3 class="heading-medium">Good Garms: A glossary for sustainable and ethical fashion ↗</h3>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="text-size-regular margin-0">Jan 1, 2021  ·  4 min read<br></p>
+                </a>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="section">
+        <div class="page-padding">
+          <div style="opacity:0" class="container-large">
+            <div class="layout-12-column">
+              <div id="w-node-b833d435-3692-840b-c2a1-d167dffd2cfa-ac428595" style="width:0%;height:100%" class="section-title">
+                <h2>Email list</h2>
+              </div>
+              <div id="w-node-b833d435-3692-840b-c2a1-d167dffd2cfd-ac428595" class="content-wrapper">
+                <h3 style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(10deg, 6deg);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(10deg, 6deg);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(10deg, 6deg);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(10deg, 6deg);opacity:0" class="heading-xlarge">Be the first to hear about new writing and blog posts</h3>
+              </div>
+              <div id="w-node-b833d435-3692-840b-c2a1-d167dffd2d00-ac428595" class="content-wrapper">
+                <div class="form-block w-form">
+                  <form method="get" name="email-form" data-name="Email Form" action="https://bryntaylor.us6.list-manage.com/subscribe/post?u=3a0451e850379c14ec5539da1&amp;amp;id=b39a8dee7a" id="email-form" class="subscribe-form-flex">
+                    <div class="subscribe-form-input-wrapper"><input type="email" class="form-input w-input" maxlength="256" name="Email-Subscribe" data-name="Email Subscribe" placeholder="Your email" id="Email-Subscribe" required=""></div><input type="submit" value="Subscribe →" data-wait="Submitting…" data-event-label="Email Signup Button" data-event-category="Leads" class="button w-button">
+                  </form>
+                  <div class="success-message is-multi-colored w-form-done">
+                    <div class="text-size-regular text-weight-medium">Thanks for signing up!</div>
+                  </div>
+                  <div class="error-message w-form-fail">
+                    <div class="text-size-regular text-weight-medium">Something went wrong! Try again</div>
+                  </div>
+                </div>
+                <p class="text-size-small text-color-grey margin-0">No spam, unsubscribe at any time</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer id="footer" class="section-footer">
       <div class="page-padding">
