--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Nov 08 2022 13:31:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Nov 15 2022 08:25:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6361624a3134b167b142857c" data-wf-site="636113eb1674a4ffc2d7f57f" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Desmond Ajimuda · ProdDeveloper &amp; Designer</title>
+  <title>Desmond Ajimuda · Product designer &amp; Webflow developer</title>
   <meta content="Desmond Ajimuda is a product designer &amp; web developer with experience in creating innovative and impactful design solutions for software products through UI/UX." name="description">
-  <meta content="Desmond Ajimuda · ProdDeveloper &amp; Designer" property="og:title">
+  <meta content="Desmond Ajimuda · Product designer &amp; Webflow developer" property="og:title">
   <meta content="Desmond Ajimuda is a product designer &amp; web developer with experience in creating innovative and impactful design solutions for software products through UI/UX." property="og:description">
-  <meta content="Desmond Ajimuda · ProdDeveloper &amp; Designer" property="twitter:title">
+  <meta content="https://uploads-ssl.webflow.com/636113eb1674a4ffc2d7f57f/63669b954afaccd0b2669468_723748ED-B911-4560-BFBB-8551D9D9702F_1_201_a%201.jpg" property="og:image">
+  <meta content="Desmond Ajimuda · Product designer &amp; Webflow developer" property="twitter:title">
   <meta content="Desmond Ajimuda is a product designer &amp; web developer with experience in creating innovative and impactful design solutions for software products through UI/UX." property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/636113eb1674a4ffc2d7f57f/63669b954afaccd0b2669468_723748ED-B911-4560-BFBB-8551D9D9702F_1_201_a%201.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -243,7 +245,7 @@ main:focus-visible {
                     </div>
                     <div id="w-node-e2520ef5-46b0-ab47-8f9e-e0b9b177305e-b177305e" class="work-collection-item">
                       <a href="sterling-onepay-for-business.html" class="project-thumbnail-link w-inline-block">
-                        <div class="project-thumbnail-image-wrapper"><img src="images/OnePay-4.png" loading="lazy" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 79vw, (max-width: 991px) 84vw, 43vw" srcset="images/OnePay-4.png 500w, images/OnePay-4.png 800w, images/OnePay-4.png 1080w, images/OnePay-4.png 1600w, images/OnePay-4.png 1853w" class="project-thumbnail-image"></div>
+                        <div class="project-thumbnail-image-wrapper"><img src="images/OnePay-4.png" loading="lazy" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 79vw, (max-width: 991px) 84vw, 43vw" srcset="images/OnePay-4-p-500.png 500w, images/OnePay-4-p-800.png 800w, images/OnePay-4-p-1080.png 1080w, images/OnePay-4-p-1600.png 1600w, images/OnePay-4.png 1853w" class="project-thumbnail-image"></div>
                         <div class="project-title-div">
                           <h3>OnePay for business by Sterling Bank</h3>
                           <div class="heading-medium"> →</div>
