--- a/sterling-onepay-for-business.html
+++ b/sterling-onepay-for-business.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Nov 08 2022 13:31:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Nov 15 2022 08:25:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6368207151bcb8e889a1626f" data-wf-site="636113eb1674a4ffc2d7f57f" lang="en">
 <head>
   <meta charset="utf-8">
@@ -75,13 +75,13 @@
     </div>
   </div>
   <div class="section-with-bg wf-section">
-    <div><img src="images/OnePay-4.png" loading="lazy" srcset="images/OnePay-4.png 500w, images/OnePay-4.png 800w, images/OnePay-4.png 1080w, images/OnePay-4.png 1600w, images/OnePay-4.png 1853w" sizes="100vw" alt=""></div>
+    <div><img src="images/OnePay-4.png" loading="lazy" srcset="images/OnePay-4-p-500.png 500w, images/OnePay-4-p-800.png 800w, images/OnePay-4-p-1080.png 1080w, images/OnePay-4-p-1600.png 1600w, images/OnePay-4.png 1853w" sizes="100vw" alt=""></div>
   </div>
   <div class="section-2 wf-section">
     <div class="w-container">
       <div class="section-block">
         <h2>About</h2>
-        <p class="project-paragraph">Onepay for Business is a mobile payment application built on cutting- edge technology, offering tailored cardless, contactless and cashless payment solution that allow merchants receive money from their customers in a near cash instance and in a more hygienic way.<br><br>As one of the biggest Sterling Project in 2021, I partnered with the sterling team to design this app that carters for all Sterling merchants.<br></p>
+        <p class="project-paragraph">Onepay for Business is a mobile payment application built on cutting- edge technology, offering tailored cardless, contactless and cashless payment solution that allow merchants receive money from their customers in a near cash instance and in a more hygienic way.<br><br>As one of the biggest Sterling Project in 2021, I partnered with product manager Prince Ekomaru and the sterling team to design this app that carters for all Sterling bank merchants.<br></p>
       </div>
       <div class="section-block">
         <h2>The goal</h2>
