--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Nov 15 2022 08:25:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 16 2022 07:48:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6361624a3134b167b142857c" data-wf-site="636113eb1674a4ffc2d7f57f" lang="en">
 <head>
   <meta charset="utf-8">
@@ -406,12 +406,11 @@ main:focus-visible {
               <h2 class="white">Get in touch</h2>
             </div>
             <div id="w-node-_857d47e8-6135-c05d-8438-7de4332ae48a-1d954aa0" class="content-wrapper">
-              <h3 class="heading-xlarge c-white">Let&#x27;s talk about your project?</h3>
+              <h3 class="heading-xlarge c-white">Available for projects, collaboration and coffee.</h3>
             </div>
             <div id="w-node-_857d47e8-6135-c05d-8438-7de4332ae48d-1d954aa0" class="content-wrapper">
-              <p class="white">If you want to chat — email <a href="mailto:desmondajimuda@gmail.com?subject=Hi%20Desmond%20">desmondajimuda@gmail.com</a>
+              <p class="white">If you want to chat email — <a href="mailto:desmondajimuda@gmail.com?subject=Hi%20Desmond%20">desmondajimuda@gmail.com</a>
               </p>
-              <p class="margin-0 white">Available for projects, collaboration and coffee.</p>
             </div>
             <div id="w-node-_857d47e8-6135-c05d-8438-7de4332ae494-1d954aa0" class="social-media-links-layout">
               <a id="w-node-_857d47e8-6135-c05d-8438-7de4332ae495-1d954aa0" href="https://www.linkedin.com/in/desmond-ajimuda-384394127/" target="_blank" class="heading-medium text-style-link white">Linkedln</a>
